--- a/app/src/main/res/layout/healthy_food.xml
+++ b/app/src/main/res/layout/healthy_food.xml
@@ -9,7 +9,7 @@
         style="@style/cardView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginEnd="@dimen/small_margin"
+        android:layout_marginHorizontal="@dimen/small_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
