--- a/app/src/main/res/layout/fragment_diet_type.xml
+++ b/app/src/main/res/layout/fragment_diet_type.xml
@@ -22,7 +22,7 @@
             android:id="@+id/infoCard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@color/darkGreenTheme"
+            app:cardBackgroundColor="@color/yello_heavy"
             app:cardCornerRadius="@dimen/corner_radius_12dp"
             app:cardElevation="0dp"
             android:layout_margin="@dimen/default_margin"
@@ -48,8 +48,7 @@
                     android:layout_height="wrap_content"
                     android:text="Standard Diet"
                     style="@style/titleText"
-                    android:textColor="@color/white"
-
+                    android:textColor="@color/black"
                     app:layout_constraintTop_toBottomOf="@id/dietIcon"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -59,7 +58,6 @@
                     android:layout_height="wrap_content"
                     android:text="@string/standardDiet"
                     style="@style/bodyText"
-                    android:textColor="@color/white"
                     android:layout_marginTop="@dimen/small_margin"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
