--- a/app/src/main/res/drawable/circular_progress_bar_of_item_details.xml
+++ b/app/src/main/res/drawable/circular_progress_bar_of_item_details.xml
@@ -5,7 +5,7 @@
             android:shape="ring"
             android:thicknessRatio="16"
             android:useLevel="false">
-            <solid android:color="@color/chip_teal" />
+            <solid android:color="@color/white" />
         </shape>
     </item>
     <item>
@@ -15,7 +15,7 @@
                 android:shape="ring"
                 android:thicknessRatio="16"
                 android:useLevel="true">
-                <solid android:color="@color/darkGreenTheme"/>
+                 <solid android:color="@color/progress_color"/>
             </shape>
         </rotate>
     </item>
