--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -19,7 +19,7 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
-        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:labelVisibilityMode="selected"
@@ -28,7 +28,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment"
         app:menu="@menu/menu_bottom_nav"
-        app:backgroundTint="@color/yello_light"
-        app:itemTextColor="@color/bottom_item_color"
-        app:itemIconTint="@color/bottom_item_color"/>
+        style="@style/bottom_nav"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
