--- a/app/src/main/res/layout/fragment_diet_type.xml
+++ b/app/src/main/res/layout/fragment_diet_type.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/fragment_bg"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <include
         android:id="@+id/dietTypesToolbar"
@@ -70,7 +71,6 @@
             android:layout_height="wrap_content"
             android:text="@string/question"
             style="@style/titleText"
-            android:textColor="@color/black"
             android:layout_marginTop="@dimen/large_margin"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
