--- a/app/src/main/res/layout/healthy_food.xml
+++ b/app/src/main/res/layout/healthy_food.xml
@@ -43,6 +43,7 @@
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="test"
+                android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintDimensionRatio="5:1"
                 app:layout_constraintEnd_toEndOf="parent"
