--- a/app/src/main/res/layout/item_meal.xml
+++ b/app/src/main/res/layout/item_meal.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="test"
+        android:textColor="@color/black"
         app:layout_constraintStart_toEndOf="@+id/mealIcon1"
         app:layout_constraintBottom_toTopOf="@id/guide_center_vertical"/>
 
