--- a/app/src/main/res/drawable/shape_img.xml
+++ b/app/src/main/res/drawable/shape_img.xml
@@ -2,7 +2,7 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#F0F0F0"/>
+    <solid android:color="#FFFFFF"/>
     <corners android:topLeftRadius="@dimen/corner_radius_12dp"
         android:bottomLeftRadius="@dimen/corner_radius_12dp"/>
     <stroke android:color="@color/light_gray" android:width="1dp"/>
