--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -76,6 +76,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_fileName="searching.json"
-        app:lottie_loop="true" />
+        app:lottie_loop="true"
+        android:layout_marginTop="@dimen/default_margin"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
