--- a/app/src/main/res/layout/meal_layout.xml
+++ b/app/src/main/res/layout/meal_layout.xml
@@ -43,6 +43,8 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:text="Pizza"
+            android:fontFamily="sans-serif-medium"
+            android:textStyle="normal"
             android:textColor="@color/text_color"
             android:textSize="@dimen/small_text_size"
             app:layout_constraintEnd_toStartOf="@+id/addIcon"
@@ -56,7 +58,7 @@
             android:layout_marginStart="@dimen/small_margin"
             android:layout_marginTop="@dimen/small_margin"
             android:text="200 Cal"
-            android:textColor="@color/text_color"
+            android:textColor="#767676"
             app:layout_constraintStart_toEndOf="@+id/imgMeal"
             app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
 
