--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -4,12 +4,13 @@
     <item
         android:id="@+id/home_menu"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="@string/home" />
+        android:title="@string/home"
+        />
 
     <item
         android:id="@+id/bmi_calculator_menu"
         android:icon="@drawable/ic_cal"
-        android:title="@string/bmi" />
+        android:title="@string/bmi"/>
 
     <item
         android:id="@+id/diet_menu"
