--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/fragment_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/fragment_bg"
     tools:context=".ui.home.HomeFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/yello_heavy"
         android:layout_marginHorizontal="@dimen/large_margin"
+        app:cardBackgroundColor="@color/yello_heavy"
         app:cardCornerRadius="@dimen/corner_radius_12dp"
         app:cardElevation="0dp"
         app:contentPadding="@dimen/default_padding"
@@ -249,9 +249,9 @@
     <TextView
         android:id="@+id/healthyRecipesTv"
         style="@style/titleText"
-        android:layout_marginHorizontal="@dimen/large_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/large_margin"
         android:text="@string/healthy_recipes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -267,75 +267,71 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/healthyRecipesTv" />
 
+    <!--     if no item view-->
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_empty_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/no_items"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="empty_list.json"
+        app:lottie_loop="true" />
+
     <TextView
-        android:id="@+id/text_meal"
-        style="@style/subTitle"
+        android:id="@+id/no_items"
+        style="@style/bodyText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_margin"
-        android:text="@string/breakfast"
-        android:layout_marginHorizontal="@dimen/large_margin"
+        android:text="@string/no_item"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_healthy_recipes" />
 
-    <TextView
-        android:id="@+id/text_seeAll"
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/large_margin"
-        android:drawablePadding="@dimen/small_padding"
-        android:text="@string/see_all"
-        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
-        style="@style/subTitle"
-        app:layout_constraintBaseline_toBaselineOf="@+id/text_meal"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:visibility="visible"
+        app:constraint_referenced_ids="no_items,animation_empty_list" />
+    <!--    end of no items view-->
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_meal_item"
         style="@style/cardView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginVertical="@dimen/small_margin"
         android:layout_marginHorizontal="@dimen/large_margin"
+        android:layout_marginVertical="@dimen/small_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_meal">
+        app:layout_constraintTop_toBottomOf="@id/list_healthy_recipes">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/default_padding">
 
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/animation_empty_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/no_items"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:lottie_autoPlay="true"
-                app:lottie_fileName="empty_list.json"
-                app:lottie_loop="true" />
-
             <TextView
-                android:id="@+id/no_items"
-                style="@style/bodyText"
+                android:id="@+id/text_meal"
+                style="@style/subTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="@dimen/default_margin"
+                android:text="@string/breakfast"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="@dimen/very_small_margin"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="@string/no_item"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/list_meal_items"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toTopOf="@id/text_totalCalories"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/text_meal" />
 
             <TextView
                 android:id="@+id/text_totalCalories"
@@ -345,7 +341,6 @@
                 android:layout_marginVertical="@dimen/default_padding"
                 android:text="@string/total_calories"
                 android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/list_meal_items" />
 
@@ -357,6 +352,19 @@
                 app:layout_constraintBaseline_toBaselineOf="@+id/text_totalCalories"
                 app:layout_constraintEnd_toEndOf="parent" />
 
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animation_see_more"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/text_totalCalories"
+                app:lottie_autoPlay="true"
+                app:lottie_fileName="button_see_more.json"
+                app:lottie_loop="true" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
@@ -367,5 +375,18 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="200dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addToMealBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/small_margin"
+        android:contentDescription="@string/add_to_meal"
+        app:backgroundTint="@color/yello_heavy"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_add_24"
+        app:tint="@null" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
