--- a/app/src/main/res/layout/item_meal.xml
+++ b/app/src/main/res/layout/item_meal.xml
@@ -11,6 +11,7 @@
         app:layout_constraintEnd_toStartOf="@+id/text_mealName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
