--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -14,6 +14,6 @@
 
     <item
         android:id="@+id/diet_menu"
-        android:icon="@drawable/ic_diet"
+        android:icon="@drawable/ic_apple"
         android:title="@string/dietType" />
 </menu>
