--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -16,4 +16,9 @@
         android:id="@+id/diet_menu"
         android:icon="@drawable/ic_diet"
         android:title="@string/dietType" />
+
+    <item
+        android:id="@+id/profile_menu"
+        android:icon="@drawable/ic_person"
+        android:title="Profile" />
 </menu>
