--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,13 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
         android:id="@+id/logo_img"
-        android:layout_width="145dp"
-        android:layout_height="120dp"
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:1"
         android:src="@drawable/ic_applogo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginVertical="@dimen/large_margin"/>
+        app:layout_constraintTop_toTopOf="parent"/>
     <TextView
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
@@ -113,7 +113,7 @@
                 app:layout_constraintTop_toBottomOf="@id/user_name"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginHorizontal="@dimen/large_margin"
+                android:layout_marginHorizontal="@dimen/default_margin"
                 app:errorEnabled="true">
                 <!--    TextInputEditText weight-->
                 <com.google.android.material.textfield.TextInputEditText
@@ -146,7 +146,7 @@
                 app:layout_constraintTop_toBottomOf="@id/age"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginHorizontal="@dimen/large_margin"
+                android:layout_marginHorizontal="@dimen/default_margin"
                 app:errorEnabled="true">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/height_text"
@@ -180,7 +180,7 @@
                 android:layout_marginBottom="@dimen/default_margin"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginHorizontal="@dimen/large_margin"
+                android:layout_marginHorizontal="@dimen/default_margin"
                 app:errorEnabled="true">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/weight_text"
@@ -200,7 +200,7 @@
         app:layout_constraintEnd_toEndOf="@id/login_card"
         app:layout_constraintTop_toBottomOf="@id/login_card"
         android:layout_marginHorizontal="@dimen/default_margin"
-        android:layout_marginTop="@dimen/large_margin"
+        android:layout_marginTop="@dimen/default_margin"
         android:text="Register Now"
         android:textColor="@color/black"
         android:textSize="24sp"
